<resources>
    <string name="app_name">Sensors</string>
    <string name="location_settings">Location Settings</string>
    <string name="settings_title">IP and Port Settings</string>
    <string name="edit_ip_address">Edit IP Address</string>
    <string name="edit_port">Edit Port Number</string>
    <string name="summary_on">You can choose manual location setting</string>
    <string name="summary_of">The location of your device is given by its GPS</string>
    <string name="manual_loc">Manual Location Setting</string>
    <string name="longitude"></string>
    <string name="latitude"></string>

</resources>