<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:title="@string/settings_title"
        app:icon="@drawable/ic_baseline_computer_24">
        <EditTextPreference
            app:defaultValue="tcp://broker.hivemq.com"
            app:key="edit_ip"
            app:singleLine="true"
            app:title="@string/edit_ip_address"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            app:defaultValue="1883"
            app:key="edit_port"
            app:singleLine="true"
            app:title="@string/edit_port"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/location_settings"
        app:icon="@drawable/ic_baseline_my_location_24">
        <SwitchPreference
            app:key="manual"
            app:summaryOn="@string/summary_on"
            app:summaryOff="@string/summary_of"
            app:defaultValue="false"
            app:title="@string/manual_loc"
            />
        <ListPreference
            android:dependency="manual"
            android:entries="@array/loc_entries"
            android:entryValues="@array/loc_values"
            android:key="list_preference_1"
            android:defaultValue="4"
            android:title="Choose x and y coordinates"
            />

    </PreferenceCategory>
</PreferenceScreen>